unpackaged/main/default/objects/Product_Master_Table__c/Product_Master_Table__c.object-meta.xml
<CustomObject>
    <label>Product Master Table</label>
    <nameField>
        <displayFormat>PMT-{0000000}</displayFormat>
        <label>Product Master Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Master Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>