unpackaged/main/default/objects/Product_Master_Table__c/fields/Actual_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Actual_Record_Id__c</fullName>
    <label>Actual Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>