unpackaged/main/default/objects/Product_Master_Table__c/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add On</label>
    <referenceTo>Product_Master_Table__c</referenceTo>
    <relationshipLabel>Related Add Ons</relationshipLabel>
    <relationshipName>Add_Ons</relationshipName>
    <type>Lookup</type>
</CustomField>