unpackaged/main/default/objects/Product_Master_Table__c/fields/Add_On_Name__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Name__c</fullName>
    <formula>HYPERLINK(Add_on_rec_url__c, Add_On__r.Product_Name__c, &quot;_self&quot;)</formula>
    <label>Add On Name</label>
    <type>Text</type>
</CustomField>