unpackaged/main/default/objects/Product_Master_Table__c/fields/Add_on_rec_url__c.field-meta.xml
<CustomField>
    <fullName>Add_on_rec_url__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND(&#39;/services&#39;, $Api.Partner_Server_URL_260)) + Add_On__r.Id</formula>
    <inlineHelpText>Used for internal purpose to make Add On Name as hyperlink</inlineHelpText>
    <label>Add on rec url</label>
    <type>Text</type>
</CustomField>