unpackaged/main/default/objects/Product_Master_Table__c/fields/Additional_Revenue_Split__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revenue_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Revenue Split</label>
    <type>Checkbox</type>
</CustomField>