unpackaged/main/default/objects/Product_Master_Table__c/fields/Amortisation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Amortisation_Duration__c</fullName>
    <label>Amortisation Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>