unpackaged/main/default/objects/Product_Master_Table__c/fields/Amortisation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Amortisation_Percent__c</fullName>
    <label>Amortisation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>