unpackaged/main/default/objects/Product_Master_Table__c/fields/Bundle_Only__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Only</label>
    <type>Checkbox</type>
</CustomField>