unpackaged/main/default/objects/Product_Master_Table__c/fields/Com_rec_url__c.field-meta.xml
<CustomField>
    <fullName>Com_rec_url__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND(&#39;/services&#39;, $Api.Partner_Server_URL_260)) + Commercial_Product__r.Id</formula>
    <label>Com rec url</label>
    <type>Text</type>
</CustomField>