unpackaged/main/default/objects/Product_Master_Table__c/fields/Commercial_Product__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Product</label>
    <referenceTo>Product_Master_Table__c</referenceTo>
    <relationshipLabel>Related Commercial Products</relationshipLabel>
    <relationshipName>Commercial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>