unpackaged/main/default/objects/Product_Master_Table__c/fields/Commercial_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product_Name__c</fullName>
    <formula>HYPERLINK(Com_rec_url__c, Commercial_Product__r.Product_Name__c, &quot;_self&quot;)</formula>
    <label>Commercial Product Name</label>
    <type>Text</type>
</CustomField>