unpackaged/main/default/objects/Product_Master_Table__c/fields/Commercial_Product_Role__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product_Role__c</fullName>
    <label>Commercial Product Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>