unpackaged/main/default/objects/Product_Master_Table__c/fields/Deferred_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Account_Code__c</fullName>
    <label>Deferred Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>