unpackaged/main/default/objects/Product_Master_Table__c/fields/Duration_Term__c.field-meta.xml
<CustomField>
    <fullName>Duration_Term__c</fullName>
    <label>Duration Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>