unpackaged/main/default/objects/Product_Master_Table__c/fields/Effective_end_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_end_date__c</fullName>
    <label>Effective end date</label>
    <type>Date</type>
</CustomField>