unpackaged/main/default/objects/Product_Master_Table__c/fields/Effective_start_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_start_date__c</fullName>
    <label>Effective start date</label>
    <type>Date</type>
</CustomField>