unpackaged/main/default/objects/Product_Master_Table__c/fields/Effective_Today__c.field-meta.xml
<CustomField>
    <fullName>Effective_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effective Today</label>
    <type>Checkbox</type>
</CustomField>