unpackaged/main/default/objects/Product_Master_Table__c/fields/Income_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Income_Account_Code__c</fullName>
    <label>Income Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>