unpackaged/main/default/objects/Product_Master_Table__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>