unpackaged/main/default/objects/Product_Master_Table__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>