unpackaged/main/default/objects/Product_Master_Table__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
    <relationshipName>B2B_Product_Master_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>