unpackaged/main/default/objects/Product_Master_Table__c/fields/Offer_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Description__c</fullName>
    <description>Offer Description</description>
    <formula>Offer__r.cscfga__Description__c</formula>
    <label>Offer Description</label>
    <type>Text</type>
</CustomField>