unpackaged/main/default/objects/Product_Master_Table__c/fields/Offer_Market__c.field-meta.xml
<CustomField>
    <fullName>Offer_Market__c</fullName>
    <formula>Offer__r.Product_Node__r.Name</formula>
    <label>Offer Market</label>
    <type>Text</type>
</CustomField>