unpackaged/main/default/objects/Product_Master_Table__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <description>Offer Name</description>
    <formula>Offer__r.Name</formula>
    <label>Offer Name</label>
    <type>Text</type>
</CustomField>