unpackaged/main/default/objects/Product_Master_Table__c/fields/Overrides_Add_On_Charges__c.field-meta.xml
<CustomField>
    <fullName>Overrides_Add_On_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overrides Add On Charges</label>
    <type>Checkbox</type>
</CustomField>