unpackaged/main/default/objects/Product_Master_Table__c/fields/Parent_Product_Master__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Master</label>
    <referenceTo>Product_Master_Table__c</referenceTo>
    <relationshipName>Related_Product_Master</relationshipName>
    <type>Lookup</type>
</CustomField>