unpackaged/main/default/objects/Product_Master_Table__c/fields/Product_Catagory__c.field-meta.xml
<CustomField>
    <fullName>Product_Catagory__c</fullName>
    <label>Product Catagory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>