unpackaged/main/default/objects/Product_Master_Table__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>