unpackaged/main/default/objects/Product_Master_Table__c/fields/Product_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition_Name__c</fullName>
    <label>Product Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>