unpackaged/main/default/objects/Product_Master_Table__c/fields/Product_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_List_Price__c</fullName>
    <label>Product List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>