unpackaged/main/default/objects/Product_Master_Table__c/fields/Product_Stored_In__c.field-meta.xml
<CustomField>
    <fullName>Product_Stored_In__c</fullName>
    <description>Field to display Product stored in which object</description>
    <label>Product Stored In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>