unpackaged/main/default/objects/Product_Master_Table__c/fields/Rev_Accrual_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Rev_Accrual_GL_Code__c</fullName>
    <label>Rev Accrual GL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>