unpackaged/main/default/objects/Product_Master_Table__c/fields/SKU_Generator__c.field-meta.xml
<CustomField>
    <fullName>SKU_Generator__c</fullName>
    <label>SKU Generator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>