unpackaged/main/default/objects/Product_Master_Table__c/fields/SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>SKU_Number__c</fullName>
    <label>SKU Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>