unpackaged/main/default/objects/Product_Master_Table__c/fields/SOV__c.field-meta.xml
<CustomField>
    <fullName>SOV__c</fullName>
    <label>SOV</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>