unpackaged/main/default/objects/Product_Master_Table__c/fields/Starting_Day__c.field-meta.xml
<CustomField>
    <fullName>Starting_Day__c</fullName>
    <label>Starting Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>