unpackaged/main/default/objects/Product_Master_Table__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipName>B2B_Product_Master_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>