unpackaged/main/default/objects/Product_Master_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Product_Master__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Offer__c</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>