unpackaged/main/default/objects/Product_Master_Table__c/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>NAME</columns>
    <columns>Product_Stored_In__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>